--- a/index.html
+++ b/index.html
@@ -9,5 +9,22 @@
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header content-section">
+      <nav class="header-menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a class="header__link header__link_active text-link" href="#"> главная</a>
+          </li>
+          <li class="header__links-list-item text-link">
+            <a class="header__link" href="#">посмотреть лоты</a>
+          </li>
+          <li class="header__links-list-item text-link">
+            <a class="header__link" href="#">об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+
+    </header>
+  </body>
 </html>
