--- a/index.html
+++ b/index.html
@@ -14,17 +14,32 @@
       <nav class="header-menu">
         <ul class="header__links-list">
           <li class="header__links-list-item header__links-list-item_no-bullit">
-            <a class="header__link header__link_active text-link" href="#"> главная</a>
+            <a class="header__link header__link_active text-link" href="#0"> главная</a>
           </li>
           <li class="header__links-list-item text-link">
-            <a class="header__link" href="#">посмотреть лоты</a>
+            <a class="header__link" href="#0">посмотреть лоты</a>
           </li>
           <li class="header__links-list-item text-link">
-            <a class="header__link" href="#">об аукционе</a>
+            <a class="header__link" href="#0">об аукционе</a>
           </li>
         </ul>
       </nav>
-
+      <a class="header_logo" href="#0">
+        <img 
+        class="header_logo_image"
+        src="images/logo-black.svg" 
+        alt="главный логотип"
+        />
+      </a>
+      <address class="header_adress">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p class="address_address-text">
+          наб. Присенграхт 263-265, <br> Амстердам
+        </p>
+      </address>
     </header>
+
+    
   </body>
 </html>
