--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
         />
       </a>
       <address class="header_adress">
-        <a href="tel:+99995555555">+9 999 555 5555</a>
-        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <a class="address__item text-link" href="tel:+99995555555">+9 999 555 5555</a>
+        <a class="address__item text-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <p class="address_address-text">
           наб. Присенграхт 263-265, <br> Амстердам
         </p>
       </address>
     </header>
 
-    
+
   </body>
 </html>
