--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         </p>
       </address>
     </header>
+    <main>
+      <section class="cover content-section">
+        <div class="overlay"></div>
+      </section>
+    </main>
 
 
   </body>
