--- a/index.html
+++ b/index.html
@@ -42,7 +42,23 @@
     <main>
       <section class="cover content-section">
         <div class="overlay"></div>
+        <h1 class="cover_title">
+          <span class="aligned-text">
+          о<span cclass="letter-spacing-extended">но</span></span>
+          <span class="aligned-text aligned-text_center">
+            те<span class="letter-spacing-extended">бе</span></span>
+            <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">
+              н</span>ад<span class="remove-spacing">о</span></span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet-button">Сделать ставку</button>
+        </div>
       </section>
+      
     </main>
 
 
