--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         alt="главный логотип"
         />
       </a>
-      <address class="header__logo-image">
+      <address class="address header__address">
         <a class="address__item text-link" href="tel:+99995555555">+9 999 555 5555</a>
         <a class="address__item text-link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-        <p class="address_address-text">
-          наб. Присенграхт 263-265, <br> Амстердам
+        <p class="address__address-text">
+          наб. Принсенграхт 263- 265, Амстердам
         </p>
       </address>
     </header>
